# Sentinel-client

./: CMakeLists.txt  README.md  main.cpp
crypto/: e2ee.cpp  e2ee.hpp  identity.cpp  identity.hpp  key_exchange.cpp  key_exchange.hpp  key_store.cpp  key_store.hpp  persist.cpp  persist.hpp
menu/: menu.cpp  menu.hpp
server/: send.cpp  server.cpp  server.hpp
utils/: utils.cpp  utils.hpp
